--- a/Home.css
+++ b/Home.css
@@ -101,7 +101,13 @@
 }
 
 .u-section-4 .u-text-1 {
-  margin: 0 0 110px;
+  margin: 0 0 60px;
+}
+
+@media (max-width: 767px) {
+  .u-section-4 .u-text-1 {
+    margin-top: 60px;
+  }
 }.u-section-5 .u-sheet-1 {
   min-height: 893px;
   margin-bottom: 0;
