--- a/nicepage.css
+++ b/nicepage.css
@@ -41752,14 +41752,18 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-footer .u-social-icons-1 {
   height: 32px;
   min-height: 16px;
-  width: 32px;
-  min-width: 16px;
+  width: 74px;
+  min-width: 42px;
   white-space: nowrap;
   margin: 44px auto;
 }
 
 .u-footer .u-icon-1 {
   color: rgb(0, 122, 185) !important;
+}
+
+.u-footer .u-icon-2 {
+  height: 0;
 }
 @media (max-width: 1199px) {
   .u-footer .u-sheet-1 {
