--- a/Home.css
+++ b/Home.css
@@ -108,7 +108,7 @@
 }
 
 .u-section-5 .u-text-1 {
-  margin: 0 0 60px;
+  margin: 60px 0;
 }@font-face {
   font-family: 'AvenirLT35Light';
   font-style: normal;
