--- a/Home.css
+++ b/Home.css
@@ -97,18 +97,18 @@
 .u-section-3 .u-text-1 {
   margin: 0 0 60px;
 }.u-section-4 .u-sheet-1 {
-  min-height: 681px;
+  min-height: 845px;
 }
 
 .u-section-4 .u-text-1 {
-  margin: 1px 0 60px;
+  margin: 60px 0 0;
 }.u-section-5 .u-sheet-1 {
   min-height: 893px;
   margin-bottom: 0;
 }
 
 .u-section-5 .u-text-1 {
-  margin: 60px 0;
+  margin: 61px 0 60px;
 }@font-face {
   font-family: 'AvenirLT35Light';
   font-style: normal;
