--- a/nicepage.css
+++ b/nicepage.css
@@ -41934,7 +41934,12 @@ a.u-link.u-text-hover-grey-90:hover {
 
 
 .u-footer .u-sheet-1 {
-  min-height: 52px;
+  min-height: 90px;
+}
+
+.u-footer .u-text-1 {
+  font-family: AvenirLT35Light;
+  margin: 15px 59px 0;
 }
 
 .u-footer .u-social-icons-1 {
@@ -41943,7 +41948,7 @@ a.u-link.u-text-hover-grey-90:hover {
   width: 74px;
   min-width: 42px;
   white-space: nowrap;
-  margin: 10px auto;
+  margin: 7px auto 8px;
 }
 
 .u-footer .u-icon-1 {
@@ -41956,6 +41961,11 @@ a.u-link.u-text-hover-grey-90:hover {
 @media (max-width: 1199px) {
   .u-footer .u-sheet-1 {
     min-height: 99px;
+  }
+
+  .u-footer .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 @media (max-width: 991px) {
