--- a/nicepage.css
+++ b/nicepage.css
@@ -41934,12 +41934,7 @@ a.u-link.u-text-hover-grey-90:hover {
 
 
 .u-footer .u-sheet-1 {
-  min-height: 90px;
-}
-
-.u-footer .u-text-1 {
-  font-family: AvenirLT35Light;
-  margin: 15px 59px 0;
+  min-height: 77px;
 }
 
 .u-footer .u-social-icons-1 {
@@ -41948,7 +41943,7 @@ a.u-link.u-text-hover-grey-90:hover {
   width: 74px;
   min-width: 42px;
   white-space: nowrap;
-  margin: 7px auto 8px;
+  margin: 23px -74px 0 auto;
 }
 
 .u-footer .u-icon-1 {
@@ -41958,13 +41953,18 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-footer .u-icon-2 {
   height: 0;
 }
+
+.u-footer .u-text-1 {
+  font-family: AvenirLT35Light;
+  margin: -26px 118px 21px 0;
+}
 @media (max-width: 1199px) {
   .u-footer .u-sheet-1 {
     min-height: 99px;
   }
 
   .u-footer .u-text-1 {
-    margin-left: 0;
+    margin-top: -26px;
     margin-right: 0;
   }
 }
