--- a/Qin-Weng.css
+++ b/Qin-Weng.css
@@ -98,10 +98,11 @@
   margin: 0 0 60px;
 }.u-section-4 .u-sheet-1 {
   min-height: 845px;
+  margin-bottom: 0;
 }
 
 .u-section-4 .u-text-1 {
-  margin: 60px 0 0;
+  margin: 60px 0;
 }.u-section-5 .u-sheet-1 {
   min-height: 893px;
   margin-bottom: 0;
