--- a/Qin-Weng.css
+++ b/Qin-Weng.css
@@ -1,94 +1,81 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 316px;
+  min-height: 398px;
 }
 
 .u-section-1 .u-image-1 {
   width: 266px;
   height: 266px;
-  margin: 40px auto 0 180px;
+  margin: 55px auto 0 14px;
 }
 
 .u-section-1 .u-text-1 {
-  font-family: AvenirLT35Light;
-  margin: -212px 261px 0 auto;
-}
-
-.u-section-1 .u-text-2 {
-  font-family: AvenirLT35Light;
-  margin: -38px 274px 60px auto;
-}
-
-@media (max-width: 991px) {
-  .u-section-1 .u-text-1 {
-    margin-right: 200px;
-  }
-
-  .u-section-1 .u-text-2 {
-    margin-right: 210px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-1 .u-text-1 {
-    margin-right: 150px;
-  }
-
-  .u-section-1 .u-text-2 {
-    margin-right: 158px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-1 .u-image-1 {
-    margin-left: 74px;
-  }
-
-  .u-section-1 .u-text-1 {
-    margin-right: 94px;
-  }
-
-  .u-section-1 .u-text-2 {
-    margin-right: 99px;
-  }
-}.u-section-2 .u-sheet-1 {
-  min-height: 602px;
-}
-
-.u-section-2 .u-text-1 {
-  font-family: AvenirLT35Light;
-  margin: 22px auto 0;
-}
-
-.u-section-2 .u-text-2 {
-  line-height: 1.8;
-  font-family: AvenirLT35Light;
-  margin: 13px 167px 60px 191px;
+  width: 259px;
+  margin: -224px auto 60px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-2 .u-text-2 {
-    width: 680px;
-    margin-left: 91px;
-    margin-right: 67px;
+  .u-section-1 .u-image-1 {
+    margin-top: 59px;
+    margin-left: 26px;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-top: -234px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-2 .u-text-2 {
-    margin-left: 0;
-    margin-right: 0;
+  .u-section-1 .u-image-1 {
+    margin-top: 66px;
+    margin-left: 17px;
+  }
+
+  .u-section-1 .u-text-1 {
+    width: auto;
+    margin-top: -224px;
+    margin-right: 152px;
+    margin-left: 310px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-2 .u-text-2 {
-    width: 540px;
+  .u-section-1 .u-image-1 {
+    margin-top: 59px;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-top: -216px;
+    margin-right: -16px;
+    margin-left: 298px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-2 .u-text-2 {
-    width: 340px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 510px;
+  }
+
+  .u-section-1 .u-image-1 {
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-text-1 {
+    width: 158px;
+    margin: 24px 0 3px 82px;
+  }
+}.u-section-2 .u-sheet-1 {
+  min-height: 374px;
+}
+
+.u-section-2 .u-text-1 {
+  line-height: 1.8;
+  font-family: AvenirLT35Light;
+  margin: 10px 0 60px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-text-1 {
+    width: auto;
   }
 }.u-section-3 .u-sheet-1 {
   min-height: 1330px;
