--- a/nicepage.css
+++ b/nicepage.css
@@ -41934,7 +41934,12 @@ a.u-link.u-text-hover-grey-90:hover {
 
 
 .u-footer .u-sheet-1 {
-  min-height: 77px;
+  min-height: 106px;
+}
+
+.u-footer .u-text-1 {
+  font-family: AvenirLT35Light;
+  margin: 28px 118px 0 0;
 }
 
 .u-footer .u-social-icons-1 {
@@ -41943,7 +41948,7 @@ a.u-link.u-text-hover-grey-90:hover {
   width: 74px;
   min-width: 42px;
   white-space: nowrap;
-  margin: 23px -74px 0 auto;
+  margin: 7px auto 12px;
 }
 
 .u-footer .u-icon-1 {
@@ -41953,34 +41958,47 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-footer .u-icon-2 {
   height: 0;
 }
-
-.u-footer .u-text-1 {
-  font-family: AvenirLT35Light;
-  margin: -26px 118px 21px 0;
-}
 @media (max-width: 1199px) {
   .u-footer .u-sheet-1 {
-    min-height: 99px;
+    min-height: 140px;
   }
 
   .u-footer .u-text-1 {
-    margin-top: -26px;
+    margin-top: 29px;
     margin-right: 0;
+  }
+
+  .u-footer .u-social-icons-1 {
+    margin-top: 0;
+    margin-bottom: 24px;
   }
 }
 @media (max-width: 991px) {
-  .u-footer .u-sheet-1 {
-    min-height: 76px;
+  .u-footer .u-social-icons-1 {
+    margin-top: 11px;
+    margin-bottom: 13px;
   }
 }
 @media (max-width: 767px) {
   .u-footer .u-sheet-1 {
-    min-height: 57px;
+    min-height: 134px;
+  }
+
+  .u-footer .u-social-icons-1 {
+    margin-top: 12px;
+    margin-bottom: 12px;
   }
 }
 @media (max-width: 575px) {
   .u-footer .u-sheet-1 {
-    min-height: 36px;
+    min-height: 148px;
+  }
+
+  .u-footer .u-social-icons-1 {
+    height: 35px;
+    width: 80px;
+    margin-top: 5px;
+    margin-bottom: 5px;
   }
 }
 
