--- a/Qin-Weng.css
+++ b/Qin-Weng.css
@@ -15,44 +15,44 @@
 
 @media (max-width: 1199px) {
   .u-section-1 .u-image-1 {
-    margin-top: 59px;
-    margin-left: 26px;
+    margin-top: 49px;
+    margin-left: 20px;
   }
 
   .u-section-1 .u-text-1 {
-    margin-top: -234px;
+    width: auto;
+    margin-top: -226px;
+    margin-right: 273px;
+    margin-left: 409px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-image-1 {
     margin-top: 66px;
-    margin-left: 17px;
   }
 
   .u-section-1 .u-text-1 {
-    width: auto;
-    margin-top: -224px;
-    margin-right: 152px;
-    margin-left: 310px;
+    margin-right: 66px;
+    margin-left: 394px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-image-1 {
-    margin-top: 59px;
+    margin-top: 49px;
   }
 
   .u-section-1 .u-text-1 {
     margin-top: -216px;
-    margin-right: -16px;
+    margin-right: 0;
     margin-left: 298px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 510px;
+    min-height: 531px;
   }
 
   .u-section-1 .u-image-1 {
@@ -61,7 +61,9 @@
 
   .u-section-1 .u-text-1 {
     width: 158px;
-    margin: 24px 0 3px 82px;
+    margin-top: 37px;
+    margin-left: 82px;
+    margin-bottom: 11px;
   }
 }.u-section-2 .u-sheet-1 {
   min-height: 374px;
