--- a/Qin-Weng.css
+++ b/Qin-Weng.css
@@ -89,12 +89,12 @@
     margin-bottom: 60px;
   }
 }.u-section-4 .u-sheet-1 {
-  min-height: 1190px;
+  min-height: 1147px;
   margin-bottom: 0;
 }
 
 .u-section-4 .u-text-1 {
-  margin: 61px 0 165px;
+  margin: 0 0 60px;
 }
 
 @media (max-width: 1199px) {
@@ -104,7 +104,6 @@
 
   .u-section-4 .u-text-1 {
     width: auto;
-    margin-top: 0;
     margin-bottom: 100px;
   }
 }
