--- a/Qin-Weng.css
+++ b/Qin-Weng.css
@@ -63,11 +63,11 @@
     margin: 37px auto 49px;
   }
 }.u-section-2 .u-sheet-1 {
-  min-height: 326px;
+  min-height: 346px;
 }
 
 .u-section-2 .u-text-1 {
-  margin: 0 0 -9px;
+  margin: 20px 0 -9px;
 }.u-section-3 .u-sheet-1 {
   min-height: 1330px;
   margin-bottom: 0;
