--- a/nicepage.css
+++ b/nicepage.css
@@ -43197,6 +43197,8 @@ a.u-link.u-text-hover-grey-90:hover {
   .u-footer .u-text-1 {
     width: auto;
     margin-top: 18px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-footer .u-social-icons-1 {
