--- a/Qin-Weng.css
+++ b/Qin-Weng.css
@@ -69,22 +69,25 @@
 .u-section-2 .u-text-1 {
   margin: 20px 0 0;
 }.u-section-3 .u-sheet-1 {
-  min-height: 1542px;
+  min-height: 1340px;
   margin-bottom: 0;
 }
 
 .u-section-3 .u-text-1 {
-  margin: 0 0 60px;
+  margin: 0 0 70px;
 }
 
-.u-section-3 .u-btn-1 {
-  background-image: none;
-  padding: 0;
+@media (max-width: 1199px) {
+  .u-section-3 .u-text-1 {
+    margin-bottom: 100px;
+  }
 }
 
-.u-section-3 .u-btn-2 {
-  background-image: none;
-  padding: 0;
+@media (max-width: 767px) {
+  .u-section-3 .u-text-1 {
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
 }.u-section-4 .u-sheet-1 {
   min-height: 1079px;
   margin-bottom: 0;
